--- a/tei-editoriale/visual.html
+++ b/tei-editoriale/visual.html
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/page.html" data-template-at="content">
-    <div class="col-md-9">
-        <h1>Rendu graphique</h1>
-        <div class="row">
-            <div class="col-md-6">
-                <p class="app:generate"/>
-            </div>
-            <div class="col-md-6">
-            </div>
-        </div>
-    </div>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head data-template="templates:surround" data-template-with="templates/page.html" data-template-using="head" data-template-at="background">
+        <link rel="stylesheet" type="text/css" href="./resources/css/style_visual.css"/>
+    </head>
+<div data-template="templates:surround" data-template-with="templates/page.html" data-template-using="body" data-template-at="content">
+        <p class="app:generate"/>
 </div>
+</html>
